[package]
name = "trane-leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
indoc = "1.0"
lazy_static = "1.4.0"
trane = "0.9.0"
ustr = "0.9.0"
# Commented out for use for local development.
# trane = { path = "../trane" }

[dev-dependencies]
tempfile = "3.3.0"
